--- a/ebookFinder/templates/book/detail.html
+++ b/ebookFinder/templates/book/detail.html
@@ -1,30 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>검색</title>
-</head>
-<body>
+{% extends "layout.html" %}
+{% load i18n static %}
+{% block title %}{{ book.title }}{% endblock %}
+{% block body_class %}book-detail{% endblock body_class %}
+{% block extrahead %}
+{% endblock extrahead %}
+{% block content_wrapper %}
+
   <div>
-    <span>{{ book.title }}</span>
-    <span>{{ book.isbn }}</span>
-    <span>{{ book.publisher }}</span>
-    <span>{{ book.authors }}</span>
-    <span>{{ book.date_publish }}</span>
-    <span>{{ book.translators }}</span>
-    <span>{{ book.contents }}</span>
-    <span>{{ book.sell_status }}</span>
-    <span>{{ book.dt_created }}</span>
-    <div>
-      <img src="{{ book.thumbnail }}">
-    </div>
-  </div>
-  <div>ebook links
-    {% for ebook in ebooks %}
+    <section class="container-1280">
+      <div>{{ book.title }}</div>
+      <div>{{ book.isbn }}</div>
+      <div>{{ book.publisher }}</div>
+      <div>{{ book.authors }}</div>
+      <div>{{ book.date_publish }}</div>
+      <div>{{ book.translators }}</div>
+      <div>{{ book.contents }}</div>
+      <div>{{ book.sell_status }}</div>
+      <div>{{ book.dt_created }}</div>
       <div>
-        <a href="{{ ebook.url }}">{{ ebook.book_store }}</a>
+        <img src="{{ book.thumbnail }}">
       </div>
-    {% endfor %}
+    </section>
   </div>
-</body>
-</html>
+  <div class="container-1280">
+    <section>
+      <div> ebook links</div>
+      <div>
+      {% for ebook in ebooks %}
+        <a href="{{ ebook.url }}">{{ ebook.book_store }}</a>
+      {% endfor %}
+      </div>
+    </section>
+  </div>
+{% endblock content_wrapper %}
+
+{% block extrascripts %}
+  {{ block.super }}
+{% endblock %}
