--- a/ebookFinder/static/scss/base/_color.scss
+++ b/ebookFinder/static/scss/base/_color.scss
@@ -38,3 +38,10 @@ $color-red600: #db2121;
 $color-red700: #d11519;
 $color-red800: #c70006;
 $color-red900: #bf0006;
+
+
+$color-blue100: #b3cde0;
+$color-blue300: #6497b1;
+$color-blue500: #005b96;
+$color-blue700: #03396c;
+$color-blue900: #011f4b;
