--- a/ebookFinder/static/scss/main.scss
+++ b/ebookFinder/static/scss/main.scss
@@ -5,5 +5,8 @@
 @import "layout/header";
 
 @import "component/container";
+@import "component/form";
+@import "component/link";
+@import "component/etc";
 
 @import "page/book";
