--- a/ebookFinder/static/scss/component/_container.scss
+++ b/ebookFinder/static/scss/component/_container.scss
@@ -17,15 +17,11 @@
 }
 
 .container-1280 {
-  width: 1280px;
+  max-width: 1280px;
   margin: 0 auto;
   &::after {
     content: '';
     display: table;
     clear:both;
   }
-}
-
-.searchbox-wrapper {
-
 }
