--- a/ebookFinder/static/scss/layout/header.scss
+++ b/ebookFinder/static/scss/layout/header.scss
@@ -1,6 +1,7 @@
 header {
   .base-nav {
-    background: $color-indigo100;
+    background: $color-indigo300;
+    min-width: 500px;
     min-height: 50px;
 
     .nav-content {
@@ -16,7 +17,18 @@ header {
         }
       }
     }
+    .nav-logo-wrapper {}
+    .left-nav {}
+    .searchbox-wrapper {
+      min-width: 250px;
+      width: 60%;
 
+      input {
+        width: calc(100% - 30px);
+      }
+
+    }
+    .right-nav {}
     .nav-divider {border-left: 1px solid $color-indigo400;}
     .gnb-menu {color: $color-white; &:hover {background-color: $color-indigo200;}}
   }
