--- a/ebookFinder/static/scss/main.scss
+++ b/ebookFinder/static/scss/main.scss
@@ -9,4 +9,6 @@
 @import "component/link";
 @import "component/etc";
 
-@import "page/book";
+@import "page/index";
+@import "page/list";
+@import "page/detail";
