--- a/ebookFinder/templates/base.html
+++ b/ebookFinder/templates/base.html
@@ -30,6 +30,7 @@
   {% endblock %}
 
   {% block scripts %}
+    <script src="{% static "js/jquery.min.js" %}" type="text/javascript"></script>
   {% endblock scripts %}
 
   {% block extrahead %}
@@ -47,8 +48,6 @@
 {% block modals %}{% endblock modals %}
 {% block template_loader %}{% endblock template_loader %}
 
-<script>
-</script>
 {% block extrascripts %}{% endblock extrascripts %}
 </body>
 </html>
