--- a/ebookFinder/static/scss/component/_link.scss
+++ b/ebookFinder/static/scss/component/_link.scss
@@ -3,15 +3,15 @@
   border-radius: 5px;
   cursor: pointer;
   background-color: $color-gray10;
+  color: $color-gray900;
 
   &:hover {
     background-color: $color-blue300;
   }
-
-
 }
 
 .link-block {
   display: block;
   margin-bottom: 5px;
+  width: 100%;
 }
