--- a/ebookFinder/templates/base.html
+++ b/ebookFinder/templates/base.html
@@ -9,7 +9,7 @@
     <meta name="description" content="ebookFinder"/>
     <meta property="og:description" content="ebookFinder"/>
     <meta property="og:image" content="https://user-images.githubusercontent.com/38183218/60137151-0d6a0b00-97e1-11e9-836a-56c2721b025b.png"/>
-    <meta property="keyword" content="ebookFinder,전자책">
+    <meta property="keyword" content="ebookFinder,전자책,ebook,pdf,책,서점,독후감,리뷰,">
   {% endblock meta_description %}
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
