--- a/ebookFinder/static/scss/base/_style.scss
+++ b/ebookFinder/static/scss/base/_style.scss
@@ -95,24 +95,36 @@
   margin-left: auto;
 }
 
+.p-4-0 {
+  padding: 4px 0;
+}
 .p-16 {
   padding: 16px;
 }
-
 .p-0-16 {
   padding: 0 16px;
 }
-
 .p-0-24 {
   padding: 0 24px;
 }
 
+.m-8-0 {
+  margin: 8px 0;
+
+}
 .mt-50 {
   margin-top: 50px;
 }
-
+.mr-10 {
+  margin-right: 10px;
+}
+.mr-20 {
+  margin-right: 20px;
+}
+.mb-20 {
+  margin-bottom: 20px;
+}
 
 .hide {
-  //visibility: hidden;
   display: none;
 }
