--- a/ebookFinder/static/scss/component/_etc.scss
+++ b/ebookFinder/static/scss/component/_etc.scss
@@ -29,5 +29,13 @@
   min-width: 50px;
 }
 
+.badge-success {
+  background-color: $color-gray700;
+
+  padding: 5px 7px;
+  min-width: 70px;
+  color: $color-white;
+}
+
 
 
