--- a/ebookFinder/static/scss/component/_link.scss
+++ b/ebookFinder/static/scss/component/_link.scss
@@ -1,17 +1,36 @@
 .link {
-  min-height: 50px;
   border-radius: 5px;
   cursor: pointer;
   background-color: $color-gray10;
-  color: $color-gray900;
+  color: $color-gray700;
+  text-decoration: none;
 
   &:hover {
-    background-color: $color-blue300;
+    background-color: $color-indigo300;
+
+    .info-title {
+      color: $color-white;
+    }
+    .info-etc {
+      color: $color-gray10;
+    }
   }
 }
 
 .link-block {
   display: block;
+  min-height: 50px;
   margin-bottom: 5px;
   width: 100%;
+
+  .item-thumnail{
+    display: inline-block;
+    border: solid 1px $color-indigo300;
+    border-radius: 5px;
+
+  }
+  .item-info {
+    display: inline-block;
+    vertical-align: top;
+  }
 }
