--- a/ebookFinder/static/scss/page/detail.scss
+++ b/ebookFinder/static/scss/page/detail.scss
@@ -5,9 +5,8 @@ body.book-detail {
     .detail-content{
       display: inline-block;
       padding: 20px;
-      max-width: calc(100% - 300px);
+      width: calc(100% - 250px);
       border-right: solid 2px $color-gray100;
-
 
       .content-header {
         .header-thumnail{
@@ -18,17 +17,11 @@ body.book-detail {
           vertical-align: top;
         }
       }
-      .content-links {
-        .links-wrapper {
-        }
-      }
-
     }
     .detail-side {
       display: inline-block;
       vertical-align: top;
-      width: 250px;
+      width: 200px;
     }
   }
-
 }
