--- a/ebookFinder/templates/book/list.html
+++ b/ebookFinder/templates/book/list.html
@@ -1,26 +1,33 @@
 {% extends "layout.html" %}
 {% load i18n static %}
-{% block title %}전자책 검색{% endblock %}
+{% block title %}{{ query }}의 검색결과{% endblock %}
 {% block body_class %}book-list{% endblock body_class %}
 {% block extrahead %}
+  {% block meta_description %}
+    <meta property="title" content="{{ query }}의 검색 결과 | ebookFinder"/>
+    <meta property="og:title" content="{{ query }}의 검색 결과 | ebookFinder"/>
+    <meta name="description" content="ebookFinder"/>
+    <meta property="og:description" content="ebookFinder"/>
+    <meta property="og:image" content="ebookFinder"/>
+    <meta property="keyword" content="ebookFinder,전자책,ebook,pdf,책,서점,독후감,리뷰,">
+  {% endblock %}
 {% endblock extrahead %}
 {% block content_wrapper %}
   <div class="list-wrap p-0-16 container-1280">
-    <section class="list-meta">
-      '{{ query }}' 검색 결과 | {{ books_meta.total_count }} 건
-    </section>
+    <h1 class="list-meta subtitle-1 text500">'{{ query }}'의 검색 결과 | {{ books_meta.total_count }} 건
+    </h1>
     <section class="list-content">
       <ul style="list-style-type: none;">
         {% for book in books %}
-          <li >
+          <li>
             <a class="content-item link link-block" href="/book/{{ book.isbn | slugify }}">
               <img class="item-thumnail" src={% if book.thumbnail %}"{{ book.thumbnail }}"{% else %}{% static "img/no-book-img.png" %} width="70"{% endif %} height="100">
               <div class="item-info">
-                <p class="subtitle-2-bold">{{ book.title }}</p>
-                <span class="caption-1">{{ book.authors|join:',' }}{% if book.translators %} | {{ book.translators|join:',' }}{% endif %}</span>
-                <span class="caption-1">| {{ book.publisher }}</span>
-                <span class="caption-1">| {{ book.price }}</span>
-                <span class="caption-1">| {{ book.datetime|slice:":-19" }}</span>
+                <h2 class="subtitle-2-bold info-title">{{ book.title }}</h2>
+                <span class="caption-1 info-etc">{{ book.authors|join:',' }}{% if book.translators %} | {{ book.translators|join:',' }}{% endif %}</span>
+                <span class="caption-1 info-etc">| {{ book.publisher }}</span>
+                <span class="caption-1 info-etc">| {{ book.price }}원</span>
+                <span class="caption-1 info-etc">| {{ book.datetime|slice:":-19" }}</span>
               </div>
             </a>
           </li>
@@ -28,7 +35,6 @@
       </ul>
     </section>
     <section class="list-side">
-      hi
     </section>
   </div>
 {% endblock content_wrapper %}
