--- a/ebookFinder/templates/base.html
+++ b/ebookFinder/templates/base.html
@@ -8,8 +8,8 @@
     <meta property="og:title" content="ebookFinder"/>
     <meta name="description" content="ebookFinder"/>
     <meta property="og:description" content="ebookFinder"/>
-    <meta property="og:image" content="https://user-images.githubusercontent.com/38183218/60137151-0d6a0b00-97e1-11e9-836a-56c2721b025b.png"/>
-    <meta property="keyword" content="ebookFinder,전자책,ebook,pdf,책,서점,독후감,리뷰,">
+    <meta property="og:image" content="/static/img/logo_self.png"/>
+    <meta property="keyword" content="ebookFinder,전자책,ebook,pdf,책,서점,독후감,리뷰">
   {% endblock meta_description %}
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -24,9 +24,6 @@
   {% block favicon %}
     <link rel="shortcut icon" href="{% static "favicon.ico" %}" type="image/x-icon"/>
     <link rel="icon" href="{% static "favicon.ico" %}" type="image/x-icon"/>
-    <link rel="apple-touch-icon" sizes="76x76" href="{% static "touch-icon-ipad.png" %}">
-    <link rel="apple-touch-icon" sizes="120x120" href="{% static "touch-icon-iphone-retina.png" %}">
-    <link rel="apple-touch-icon" sizes="152x152" href="{% static "touch-icon-ipad-retina.png" %}">
   {% endblock %}
 
   {% block scripts %}
