--- a/ebookFinder/templates/book/detail.html
+++ b/ebookFinder/templates/book/detail.html
@@ -31,11 +31,13 @@
         <div class="content-links mt-50">
           <h2 class="subtitle-1-bold">전자책 보러가기</h2>
           <hr/>
-          <p class="mb-20"><span class="badge badge-success caption-1-bold">업데이트</span> {{ book.dt_created|date:'Y년 m월' }}</p>
+          <p class="mb-20"><span class="badge badge-success caption-1-bold">업데이트</span> {{ book.date_searched|date:'Y년 m월' }}</p>
           <div class="links-wrapper">
             {% for ebook in ebooks %}
-              <a class="link link-block" href="{{ ebook.url }}" target="_blank">
-                <img alt="{{ ebook.repr }}" class="item-thumnail" src="{{ ebook.logo }}" height="64">
+              <a class="link link-block" href="{% if ebook.deeplink %}{{ ebook.deeplink }}{% else %}{{ ebook.url }}{% endif %}" target="_blank">
+                <div class="item-thumnail logo">
+                  <img alt="{{ ebook.repr }}" src="{{ ebook.logo }}" height="64">
+                </div>
                 <div class="item-info">
                   <h3 class="body-1-bold info-title m-8-0">{{ ebook.book.title }} - {{ ebook.repr }}</h3>
                   <span class="caption-1 info-etc">{% if ebook.price %}{{ ebook.price }}원{% endif %}</span>
