--- a/ebookFinder/templates/book/detail.html
+++ b/ebookFinder/templates/book/detail.html
@@ -4,12 +4,12 @@
 {% block body_class %}book-detail{% endblock body_class %}
 {% block extrahead %}
   {% block meta_description %}
-    <meta property="title" content="{{ book.title }} | ebookFinder"/>
-    <meta property="og:title" content="{{ book.title }} | ebookFinder"/>
+    <meta property="title" content="{{ book.title }} | 이북모임?!"/>
+    <meta property="og:title" content="{{ book.title }} | 이북모임?!"/>
     <meta name="description" content="{{ book.contents }}"/>
     <meta property="og:description" content="{{ book.contents }}"/>
     <meta property="og:image" content="{{ book.thumbnail }}"/>
-    <meta property="keyword" content="ebookFinder,전자책,ebook,pdf,책,서점,독후감,리뷰,{{ book.title }}">
+    <meta property="keyword" content="이북모임?!,전자책,ebook,pdf,책,서점,독후감,리뷰,{{ book.title }}">
   {% endblock %}
 {% endblock extrahead %}
 {% block content_wrapper %}
