--- a/ebookFinder/templates/book/list.html
+++ b/ebookFinder/templates/book/list.html
@@ -4,12 +4,12 @@
 {% block body_class %}book-list{% endblock body_class %}
 {% block extrahead %}
   {% block meta_description %}
-    <meta property="title" content="{{ query }}의 검색 결과 | ebookFinder"/>
-    <meta property="og:title" content="{{ query }}의 검색 결과 | ebookFinder"/>
-    <meta name="description" content="ebookFinder"/>
-    <meta property="og:description" content="ebookFinder"/>
-    <meta property="og:image" content="ebookFinder"/>
-    <meta property="keyword" content="ebookFinder,전자책,ebook,pdf,책,서점,독후감,리뷰,">
+    <meta property="title" content="{{ query }}의 검색 결과 | 이북모임?!"/>
+    <meta property="og:title" content="{{ query }}의 검색 결과 | 이북모임?!"/>
+    <meta name="description" content="이북모임?!"/>
+    <meta property="og:description" content="이북모임?!"/>
+    <meta property="og:image" content="이북모임?!"/>
+    <meta property="keyword" content="이북모임?!,전자책,ebook,pdf,책,서점,독후감,리뷰,">
   {% endblock %}
 {% endblock extrahead %}
 {% block content_wrapper %}
