--- a/ebookFinder/templates/layout.html
+++ b/ebookFinder/templates/layout.html
@@ -6,7 +6,7 @@
       <section class="base-nav">
         <div class="container-1280 p-16">
           <nav class="d-flex align-items-center ">
-            <a class="nav-logo-wrapper gnb-menu mr-20 title-2-bold" href="/book/">ebookFinder
+            <a class="nav-logo-wrapper gnb-menu mr-50 title-1" href="/book/">이북모임?!
             </a>
             <div class="searchbox-wrapper">
               <form method="get" action="/book/list">
