--- a/ebookFinder/templates/base.html
+++ b/ebookFinder/templates/base.html
@@ -4,21 +4,22 @@
 <head>
   <meta charset="UTF-8">
   {% block meta_description %}
-    <meta property="title" content="ebookFinder"/>
-    <meta property="og:title" content="ebookFinder"/>
-    <meta name="description" content="ebookFinder"/>
-    <meta property="og:description" content="ebookFinder"/>
+    <meta property="title" content="이북모임?!"/>
+    <meta property="og:title" content="이북모임?!"/>
+    <meta name="description" content="이북모임?!"/>
+    <meta property="og:description" content="이북모임?!"/>
     <meta property="og:image" content="/static/img/logo_self.png"/>
-    <meta property="keyword" content="ebookFinder,전자책,ebook,pdf,책,서점,독후감,리뷰">
+    <meta property="keyword" content="이북모임?!,전자책,ebook,pdf,책,서점,독후감,리뷰">
   {% endblock meta_description %}
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="author" content="django@kakao.com"/>
-  <title>{% block title %}{% endblock %} | ebookFinder {% block title_sub_text %}{% endblock %}</title>
+  <title>{% block title %}{% endblock %} | 이북모임?! {% block title_sub_text %}{% endblock %}</title>
 
   {% block mainstylesheet %}
     <link rel="stylesheet" href="{% static "css/main.css" %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap" rel="stylesheet">
   {% endblock %}
 
   {% block favicon %}
