--- a/ebookFinder/static/scss/base/_typography.scss
+++ b/ebookFinder/static/scss/base/_typography.scss
@@ -10,7 +10,7 @@
 
 
 .title-1 {
-  font-family: Gamja Flower;
+  font-family: 'Gugi', cursive;
   font-weight: 700;
   font-size: 48px;
   line-height: 64px;
