--- a/ebookFinder/templates/base.html
+++ b/ebookFinder/templates/base.html
@@ -19,7 +19,7 @@
   {% block mainstylesheet %}
     <link rel="stylesheet" href="{% static "css/main.css" %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">
   {% endblock %}
 
   {% block favicon %}
