google site verification

--- a/ebookFinder/templates/base.html
+++ b/ebookFinder/templates/base.html
@@ -16,6 +16,8 @@
   <meta name="author" content="django@kakao.com"/>
   <title>{% block title %}{% endblock %} | 이북모임?! {% block title_sub_text %}{% endblock %}</title>
 
+  <meta name="google-site-verification" content="Dmtv52OHDAbvyZ7iRjWDJb11LYkaTVH2c6DoEzP1fIw" />
+
   {% block mainstylesheet %}
     <link rel="stylesheet" href="{% static "css/main.css" %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
