naver site verification

--- a/ebookFinder/templates/base.html
+++ b/ebookFinder/templates/base.html
@@ -17,6 +17,7 @@
   <title>{% block title %}{% endblock %} | 이북모임?! {% block title_sub_text %}{% endblock %}</title>
 
   <meta name="google-site-verification" content="Dmtv52OHDAbvyZ7iRjWDJb11LYkaTVH2c6DoEzP1fIw" />
+  <meta name="naver-site-verification" content="9088996efd73a450e209eefecf2af69360aafb79" />
 
   {% block mainstylesheet %}
     <link rel="stylesheet" href="{% static "css/main.css" %}">
