mobile page prototype

--- a/ebookFinder/static/scss/page/detail.scss
+++ b/ebookFinder/static/scss/page/detail.scss
@@ -1,27 +1,61 @@
-body.book-detail {
-  margin: 0;
+@media(min-width: 800px) {
+  body.book-detail {
+    margin: 0;
 
-  .detail-wrap {
-    .detail-content{
-      display: inline-block;
-      padding: 20px;
-      width: calc(100% - 250px);
-      border-right: solid 2px $color-gray100;
+    .detail-wrap {
+      .detail-content {
+        display: inline-block;
+        padding: 20px;
+        width: calc(100% - 250px);
+        border-right: solid 2px $color-gray100;
 
-      .content-header {
-        .header-thumnail{
-          display: inline-block;
-        }
-        .header-info {
-          display: inline-block;
-          vertical-align: top;
+        .content-header {
+          .header-thumnail {
+            display: inline-block;
+          }
+
+          .header-info {
+            display: inline-block;
+            vertical-align: top;
+          }
         }
       }
+
+      .detail-side {
+        display: inline-block;
+        vertical-align: top;
+        width: 200px;
+      }
     }
-    .detail-side {
-      display: inline-block;
-      vertical-align: top;
-      width: 200px;
+  }
+}
+
+@media(min-width: 320px) and (max-width: 800px) {
+  body.book-detail {
+    margin: 0;
+
+    .detail-wrap {
+      .detail-content {
+        display: block !important;
+        padding-top: 20px;
+        width: 100%;
+        border-right: solid 2px $color-gray100;
+
+        .content-header {
+          .header-thumnail {
+            display: block !important;
+            margin: 0 auto;
+          }
+
+          .header-info {
+            display: block !important;
+          }
+        }
+      }
+
+      .detail-side {
+        display: none !important;
+      }
     }
   }
 }
