--- a/ebookFinder/static/scss/page/list.scss
+++ b/ebookFinder/static/scss/page/list.scss
@@ -1,20 +1,43 @@
-body.book-list {
-  margin: 0;
+@media(min-width: 800px) {
 
-  .list-wrap {
-    .list-content{
-      display: inline-block;
-      width: calc(100% - 250px);
-      border-right: solid 2px $color-gray100;
+  body.book-list {
+    margin: 0;
 
-      .content-item {
+    .list-wrap {
+      .list-content {
+        display: inline-block;
+        width: calc(100% - 250px);
+        border-right: solid 2px $color-gray100;
 
       }
+
+      .list-side {
+        display: inline-block;
+        vertical-align: top;
+        width: 200px;
+      }
     }
-    .list-side {
-      display: inline-block;
-      vertical-align: top;
-      width: 200px;
+  }
+}
+
+@media(min-width: 320px) and (max-width: 800px) {
+  body.book-list {
+    margin: 0;
+
+    .list-wrap {
+      .list-content{
+        display: block !important;
+        width: 100%;
+        border-right: solid 2px $color-gray100;
+
+        ul {
+          padding: 0;
+        }
+
+      }
+      .list-side {
+        display: none !important;
+      }
     }
   }
 }
