--- a/ebookFinder/templates/layout.html
+++ b/ebookFinder/templates/layout.html
@@ -43,7 +43,7 @@
   {% endblock %}
 
   {% block message %}
-    {% include "partials/alert_messages.html" %}
+{#    {% include "partials/alert_messages.html" %}#}
   {% endblock message %}
 
   <div class="gaia">
