--- a/ebookFinder/templates/base.html
+++ b/ebookFinder/templates/base.html
@@ -13,7 +13,7 @@
   {% endblock meta_description %}
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0,">
   <meta name="author" content="django@kakao.com"/>
   <title>{% block title %}{% endblock %} | 이북모임?! {% block title_sub_text %}{% endblock %}</title>
 
