--- a/ebookFinder/templates/book/index.html
+++ b/ebookFinder/templates/book/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% load i18n static %}
-{% block title %}전자책 검색은{% endblock %}
+{% block title %}전자책 비교 검색{% endblock %}
 {% block body_class %}book-index{% endblock body_class %}
 {% block extrahead %}
 {% endblock extrahead %}
