--- a/ebookFinder/templates/layout.html
+++ b/ebookFinder/templates/layout.html
@@ -18,24 +18,24 @@
                 </div>
               </form>
             </div>
-            <div class="left-nav push hide">
-              <a href="" class="gnb-menu body-2">GNB1</a>
-              <a href="" class="gnb-menu body-2">GNB2</a>
-            </div>
-            <div class="right-nav push hide">
-              <div class="right-nav-list">
-                <a class="right-nav-item" href="#" data-toggle="dropdown">
-                  <i class="fas fa-bars fa-2x" style="color: #000;"></i>
-                </a>
-                <div class="nav-dropdown hide">
-                  <a tabindex="-1" class="nav-dropdown-item body-2" href=""><i class="fas fa-pen"></i>dropdown1
-                  </a>
-                  <div class="nav-divider"></div>
-                  <a tabindex="-1" class="nav-dropdown-item body-2" href=""><i class="fas fa-pen"></i>dropdown2
-                  </a>
-                </div>
-              </div>
-            </div>
+{#            <div class="left-nav push hide">#}
+{#              <a href="" class="gnb-menu body-2">GNB1</a>#}
+{#              <a href="" class="gnb-menu body-2">GNB2</a>#}
+{#            </div>#}
+{#            <div class="right-nav push hide">#}
+{#              <div class="right-nav-list">#}
+{#                <a class="right-nav-item" href="#" data-toggle="dropdown">#}
+{#                  <i class="fas fa-bars fa-2x" style="color: #000;"></i>#}
+{#                </a>#}
+{#                <div class="nav-dropdown hide">#}
+{#                  <a tabindex="-1" class="nav-dropdown-item body-2" href=""><i class="fas fa-pen"></i>dropdown1#}
+{#                  </a>#}
+{#                  <div class="nav-divider"></div>#}
+{#                  <a tabindex="-1" class="nav-dropdown-item body-2" href=""><i class="fas fa-pen"></i>dropdown2#}
+{#                  </a>#}
+{#                </div>#}
+{#              </div>#}
+{#            </div>#}
           </nav>
         </div>
       </section>
