--- a/ebookFinder/templates/base.html
+++ b/ebookFinder/templates/base.html
@@ -4,18 +4,19 @@
 <head>
   <meta charset="UTF-8">
   {% block meta_description %}
-    <meta property="title" content="이북모임?!"/>
-    <meta property="og:title" content="이북모임?!"/>
-    <meta name="description" content="이북모임?!"/>
-    <meta property="og:description" content="이북모임?!"/>
+    <meta property="title" content="한눈에 보는 전자책 정보 - 이북모임"/>
+    <meta property="og:title" content="한눈에 보는 전자책 정보 - 이북모임"/>
+    <meta name="description" content="전자책 판매 정보와 가격 정보를 한눈에 비교하세요!"/>
+    <meta property="og:description" content="전자책 판매 정보와 가격 정보를 한눈에 비교하세요!"/>
     <meta property="og:image" content="/static/img/logo_self.png"/>
-    <meta property="keyword" content="이북모임?!,전자책,ebook,pdf,책,서점,독후감,리뷰">
+    <meta property="og:url" content="https://ebookmoim.ml">
+    <meta property="keyword" content="이북모임,이북,전자책,ebook,비교,검색,서점,순위,인터넷 서점">
   {% endblock meta_description %}
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0,">
   <meta name="author" content="django@kakao.com"/>
-  <title>{% block title %}{% endblock %} | 이북모임?! {% block title_sub_text %}{% endblock %}</title>
+  <title>{% block title %}{% endblock %} - 이북모임?! {% block title_sub_text %}{% endblock %}</title>
 
   <meta name="google-site-verification" content="Dmtv52OHDAbvyZ7iRjWDJb11LYkaTVH2c6DoEzP1fIw" />
   <meta name="naver-site-verification" content="9088996efd73a450e209eefecf2af69360aafb79" />
@@ -29,6 +30,9 @@
   {% block favicon %}
     <link rel="shortcut icon" href="{% static "favicon.ico" %}" type="image/x-icon"/>
     <link rel="icon" href="{% static "favicon.ico" %}" type="image/x-icon"/>
+    <link rel="apple-touch-icon" sizes="76x76" href="{% static "touch-icon-ipad.png" %}">
+    <link rel="apple-touch-icon" sizes="120x120" href="{% static "touch-icon-iphone-retina.png" %}">
+    <link rel="apple-touch-icon" sizes="152x152" href="{% static "touch-icon-ipad-retina.png" %}">
   {% endblock %}
 
   {% block scripts %}
