--- a/ebookFinder/templates/book/index.html
+++ b/ebookFinder/templates/book/index.html
@@ -3,6 +3,7 @@
 {% block title %}전자책 비교 검색{% endblock %}
 {% block body_class %}book-index{% endblock body_class %}
 {% block extrahead %}
+  <link rel="canonical" href="https://ebookmoim.ml">
 {% endblock extrahead %}
 {% block content_wrapper %}
   <div class="container-1280">
