--- a/ebookFinder/templates/base.html
+++ b/ebookFinder/templates/base.html
@@ -12,10 +12,12 @@
     <meta property="og:url" content="https://ebookmoim.ml">
     <meta property="keyword" content="이북모임,이북,전자책,ebook,비교,검색,서점,순위,인터넷 서점">
   {% endblock meta_description %}
+  <meta name="robots" content="ALL">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0,">
-  <meta name="author" content="django@kakao.com"/>
+  <meta name="author" content="chankoo"/>
+  <meta name ="reply-to" content="django@kakao.com">
   <title>{% block title %}{% endblock %} - 이북모임?! {% block title_sub_text %}{% endblock %}</title>
 
   <meta name="google-site-verification" content="Dmtv52OHDAbvyZ7iRjWDJb11LYkaTVH2c6DoEzP1fIw" />
