--- a/ebookFinder/templates/layout.html
+++ b/ebookFinder/templates/layout.html
@@ -14,7 +14,7 @@
                   <label class="mr-10">
                     <i class="fas fa-search fa-lg"></i>
                   </label>
-                  <input class="form-control-lg" type="text" name="query"/>
+                  <input class="form-control-lg" type="text" name="q"/>
                 </div>
               </form>
             </div>
