chores: cloud settings

--- a/ebookFinder/templates/book/detail.html
+++ b/ebookFinder/templates/book/detail.html
@@ -8,7 +8,7 @@
   <meta name="description" content="{{ book.contents }}"/>
   <meta property="og:description" content="{{ book.contents }}"/>
   <meta property="og:image" content="{{ book.thumbnail }}"/>
-  <meta property="og:url" content="{{ book.absolute_url }}">
+  <meta property="og:url" content="{{ book.get_absolute_url }}">
   <meta property="product:brand" content="이북모임">
   <meta property="product:availability" content="in stock">
   <meta property="product:condition" content="new">
@@ -20,7 +20,7 @@
   <meta property="keyword" content="{{ book.title }},이북모임,이북,전자책,ebook,pdf,서점,독후감,리뷰,가격">
 {% endblock %}
 {% block extrahead %}
-  <link rel="canonical" href="{{ book.absolute_url }}">
+  <link rel="canonical" href="{{ book.get_absolute_url }}">
 {% endblock %}
 {% block facebook_track %}
   <script>
